them thoi gian cho event, hien thi event theo thoi gian tang dan

--- a/Calendy/src/public/css/style.css
+++ b/Calendy/src/public/css/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 body {
-  background-image: linear-gradient(to bottom right, #EAE7F1, #E1F3FE); }
+  background-color: #fff; }
 
 .header {
   background-color: #fff;
@@ -102,7 +102,8 @@ body {
 .container-fluid {
   position: relative; }
 
-.add-event-form, .edit-event-form {
+.add-event-form,
+.edit-event-form {
   position: absolute;
   max-width: 300px;
   max-height: 500px;
@@ -114,38 +115,46 @@ body {
   left: -300px;
   z-index: 2;
   transition: left 0.5s ease-in; }
-  .add-event-form .add-event-header, .edit-event-form .add-event-header {
+  .add-event-form .add-event-header,
+  .edit-event-form .add-event-header {
     width: 100%;
     height: 50px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 0 20px;
-    color: #22CCEE;
-    border-bottom: 1px solid #EFEFEF; }
-    .add-event-form .add-event-header .title, .edit-event-form .add-event-header .title {
+    color: #005ff9;
+    border-bottom: 1px solid #dadce0; }
+    .add-event-form .add-event-header .title,
+    .edit-event-form .add-event-header .title {
       font-size: 1.2rem;
       font-weight: 500; }
-    .add-event-form .add-event-header .close, .edit-event-form .add-event-header .close {
+    .add-event-form .add-event-header .close,
+    .edit-event-form .add-event-header .close {
       font-size: 1.5rem;
+      color: #323b4b;
       cursor: pointer; }
-      .add-event-form .add-event-header .close:hover, .edit-event-form .add-event-header .close:hover {
+      .add-event-form .add-event-header .close:hover,
+      .edit-event-form .add-event-header .close:hover {
         color: red; }
-  .add-event-form .add-event-body, .edit-event-form .add-event-body {
+  .add-event-form .add-event-body,
+  .edit-event-form .add-event-body {
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
     gap: 5px;
     padding: 20px; }
-    .add-event-form .add-event-body .add-event-input, .edit-event-form .add-event-body .add-event-input {
+    .add-event-form .add-event-body .add-event-input,
+    .edit-event-form .add-event-body .add-event-input {
       width: 100%;
       height: 40px;
       display: flex;
       align-items: center;
       justify-content: space-between;
       gap: 10px; }
-      .add-event-form .add-event-body .add-event-input input, .edit-event-form .add-event-body .add-event-input input {
+      .add-event-form .add-event-body .add-event-input input,
+      .edit-event-form .add-event-body .add-event-input input {
         width: 100%;
         height: 100%;
         outline: none;
@@ -155,33 +164,41 @@ body {
         font-size: 1rem;
         font-weight: 400;
         color: #373c4f; }
-        .add-event-form .add-event-body .add-event-input input::placeholder, .edit-event-form .add-event-body .add-event-input input::placeholder {
+        .add-event-form .add-event-body .add-event-input input::placeholder,
+        .edit-event-form .add-event-body .add-event-input input::placeholder {
           color: #a5a5a5; }
-        .add-event-form .add-event-body .add-event-input input:focus, .edit-event-form .add-event-body .add-event-input input:focus {
+        .add-event-form .add-event-body .add-event-input input:focus,
+        .edit-event-form .add-event-body .add-event-input input:focus {
           border-bottom: 1px solid var(--my-cyan); }
-          .add-event-form .add-event-body .add-event-input input:focus::placeholder, .edit-event-form .add-event-body .add-event-input input:focus::placeholder {
-            color: #22CCEE; }
-  .add-event-form .add-event-footer, .edit-event-form .add-event-footer {
+          .add-event-form .add-event-body .add-event-input input:focus::placeholder,
+          .edit-event-form .add-event-body .add-event-input input:focus::placeholder {
+            color: #005ff9; }
+  .add-event-form .add-event-footer,
+  .edit-event-form .add-event-footer {
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: #fff;
     padding-bottom: 20px; }
-    .add-event-form .add-event-footer .add-event-btn, .edit-event-form .add-event-footer .add-event-btn {
+    .add-event-form .add-event-footer .add-event-btn,
+    .edit-event-form .add-event-footer .add-event-btn {
       height: 40px;
       font-size: 1rem;
       font-weight: 500;
       outline: none;
       border: none;
       color: white;
-      background-color: #22CCEE;
+      background-color: #005ff9;
       border-radius: 20px;
       cursor: pointer;
       padding: 0 10px;
       text-align: right;
       box-shadow: 4px 4px 8px #8888888a; }
-      .add-event-form .add-event-footer .add-event-btn:hover, .edit-event-form .add-event-footer .add-event-btn:hover {
+      .add-event-form .add-event-footer .add-event-btn:hover,
+      .edit-event-form .add-event-footer .add-event-btn:hover {
         box-shadow: 4px 4px 8px transparent;
+        transform: translateX(-2px);
+        transform: translateX(2px);
         border: 0; }
 
 .edit-event-form .add-event-footer {
@@ -193,7 +210,7 @@ body {
     outline: none;
     border: none;
     color: white;
-    background-color: #22CCEE;
+    background-color: #005ff9;
     border-radius: 20px;
     cursor: pointer;
     padding: 0 10px;
@@ -201,6 +218,8 @@ body {
     box-shadow: 4px 4px 8px #8888888a; }
     .edit-event-form .add-event-footer .save-event-btn:hover {
       box-shadow: 4px 4px 8px transparent;
+      transform: translateX(-2px);
+      transform: translateX(2px);
       border: 0; }
   .edit-event-form .add-event-footer .remove-event-btn {
     height: 40px;
@@ -217,6 +236,8 @@ body {
     box-shadow: 4px 4px 8px #8888888a; }
     .edit-event-form .add-event-footer .remove-event-btn:hover {
       box-shadow: 4px 4px 8px transparent;
+      transform: translateX(-2px);
+      transform: translateX(2px);
       border: 0; }
 
 .active {
@@ -224,37 +245,33 @@ body {
 
 .left {
   margin-top: 20px;
-  position: relative; }
+  min-height: 100vh;
+  position: relative;
+  background-color: #fff; }
   .left .event-button {
+    border-width: 0px;
     border-radius: 25px;
-    border: 3px solid white;
-    background-color: white;
+    background-color: #005ff9;
+    color: #fff;
     padding: 2px 10px;
-    min-width: 100px;
     min-height: 48px;
-    align-items: center; }
+    align-items: center;
+    display: flex;
+    box-shadow: 4px 4px 8px #8888888a; }
     .left .event-button .icon-add-event {
-      padding: 0 5px; }
+      padding: 0 5px;
+      font-size: 150%; }
     .left .event-button .text-add-event {
       padding: 0 5px;
       font-weight: 500; }
-  .left .edit-event-wrapper {
-    position: absolute;
-    visibility: hidden; }
-  .left .overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 1;
-    background-color: rgba(0, 0, 0, 0.3);
-    visibility: hidden; }
+    .left .event-button:hover {
+      box-shadow: 4px 4px 8px transparent;
+      transform: translateY(2px); }
   .left .calendar-main {
     margin-top: 20px;
-    border-radius: 40px;
     padding: 0 20px;
-    background-color: #fff; }
+    background-color: #fff;
+    border-top: 2px solid #8a94a6; }
     .left .calendar-main .calendar {
       position: relative;
       width: 100%;
@@ -263,7 +280,7 @@ body {
       flex-direction: column;
       flex-wrap: wrap;
       justify-content: space-between;
-      color: #000;
+      color: #323b4b;
       border-radius: 5px;
       background-color: transparent; }
       .left .calendar-main .calendar .month {
@@ -286,7 +303,7 @@ body {
           .left .calendar-main .calendar .month .prev:hover,
           .left .calendar-main .calendar .month .next:hover,
           .left .calendar-main .calendar .month .date:hover {
-            color: #22CCEE; }
+            color: #005ff9; }
         .left .calendar-main .calendar .month .goToDate {
           position: absolute;
           top: auto;
@@ -299,11 +316,11 @@ body {
           .left .calendar-main .calendar .month .goToDate .inputDate {
             width: 150px;
             font-weight: 500;
-            border: 3px solid #EFEFEF; }
+            border: 3px solid #dadce0; }
           .left .calendar-main .calendar .month .goToDate .goToButton {
             background-color: #CFF8FE;
-            color: #22CCEE;
-            border: 3px solid #EFEFEF;
+            color: #005ff9;
+            border: 3px solid #dadce0;
             border-left: 0;
             font-size: 0.8rem;
             display: flex;
@@ -331,7 +348,7 @@ body {
           color: red; }
       .left .calendar-main .calendar .days {
         width: 100%;
-        font-size: 100%;
+        font-size: 70%;
         font-weight: 500;
         margin-bottom: 20px;
         display: flex;
@@ -345,12 +362,16 @@ body {
           align-items: center;
           justify-content: center;
           cursor: pointer;
-          color: #22CCEE;
+          color: #323b4b;
           margin-bottom: 5px;
           position: relative; }
           .left .calendar-main .calendar .days .day:not(.prev-month):not(.active):not(.next-month):hover {
-            background-color: #eee;
+            background-color: #dadce0;
             border-radius: 50%; }
+          .left .calendar-main .calendar .days .day .active {
+            color: #fff;
+            background-color: #005ff9;
+            border-radius: 5px; }
           .left .calendar-main .calendar .days .day div {
             position: absolute;
             top: 0;
@@ -360,16 +381,12 @@ body {
             display: flex;
             align-items: center;
             justify-content: center; }
-        .left .calendar-main .calendar .days .active {
-          color: #22CCEE;
-          background-color: #CFF8FE;
-          border-radius: 50%; }
         .left .calendar-main .calendar .days .prev-month,
         .left .calendar-main .calendar .days .next-month {
-          color: #878895; }
+          color: #8a94a6; }
 
 .right {
-  background-color: white;
+  background-color: #fff;
   min-height: 100vh;
   margin-top: 20px; }
   .right .week-calendar {
@@ -378,7 +395,9 @@ body {
     .right .week-calendar .weekdays {
       display: flex;
       flex-direction: row;
-      justify-content: space-between; }
+      justify-content: space-between;
+      border: 2px solid #dadce0;
+      border-bottom: 0px; }
       .right .week-calendar .weekdays div {
         width: 14.285%;
         height: 40px;
@@ -387,49 +406,75 @@ body {
         justify-content: center;
         font-size: 1.5rem;
         font-weight: 500;
-        text-transform: capitalize; }
+        text-transform: capitalize;
+        border-left: 2px solid #dadce0; }
+        .right .week-calendar .weekdays div:first-child {
+          border-left: 0px; }
       .right .week-calendar .weekdays .weekend {
         color: red; }
     .right .week-calendar .days {
       display: flex;
       flex-direction: row;
-      justify-content: space-between; }
+      justify-content: space-between;
+      border: 2px solid #dadce0;
+      border-top: 0px;
+      border-bottom: 0px; }
       .right .week-calendar .days .day {
         width: 14.285%;
         display: flex;
         align-items: center;
         justify-content: center;
-        font-size: 2rem;
-        color: #000;
-        margin: auto; }
+        font-size: 1.5rem;
+        color: #323b4b;
+        font-weight: 500;
+        border-left: 2px solid #dadce0; }
+        .right .week-calendar .days .day:first-child {
+          border-left: 0px; }
       .right .week-calendar .days .active {
-        color: #22CCEE;
-        font-size: 2.5rem;
-        border-bottom: 3px solid #EFEFEF;
-        border-radius: 5px; }
+        color: #005ff9; }
     .right .week-calendar .events_container {
       display: flex;
       flex-direction: row;
-      justify-content: space-between; }
+      justify-content: space-between;
+      background-color: #fafbfc;
+      border: 2px solid #dadce0;
+      border-top: 0px; }
       .right .week-calendar .events_container .events {
         width: 14.285%;
         min-height: 100vh;
         display: flex;
         align-items: center;
-        font-size: 2rem;
-        color: var(--my-cyan);
-        border-left: 3px solid #EFEFEF;
-        border-top: 3px solid #EFEFEF;
+        font-size: 1.5rem;
+        border-left: 2px solid #dadce0;
+        border-top: 2px solid #dadce0;
         flex-direction: column; }
         .right .week-calendar .events_container .events .event {
-          background-color: #22CCEE;
-          color: white;
-          width: 100%;
-          min-height: 100px;
+          background-color: #fff;
+          color: #323b4b;
+          width: 90%;
           display: flex;
+          flex-direction: column;
           justify-content: center;
           align-items: center;
           cursor: pointer;
-          margin-bottom: 5px; }
+          margin-top: 10px;
+          border-bottom: 3px solid #dadce0;
+          overflow-x: hidden; }
+          .right .week-calendar .events_container .events .event .type {
+            display: block;
+            width: 100%;
+            height: 10px;
+            border-radius: 5px;
+            background-color: #005ff9; }
+          .right .week-calendar .events_container .events .event .title {
+            width: 100%;
+            font-weight: 500;
+            text-align: left;
+            padding-left: 10px; }
+          .right .week-calendar .events_container .events .event .time {
+            width: 100%;
+            font-size: 1rem;
+            text-align: left;
+            padding-left: 20px; }
         .right .week-calendar .events_container .events:first-child {
           border-left: 0; }
