--- a/Calendy/src/resources/views/home.hbs
+++ b/Calendy/src/resources/views/home.hbs
@@ -10,7 +10,10 @@
                 <input type="text" placeholder="Event Name" class="event-name" name="title" />
             </div>
             <div class="add-event-input">
-                <input type="text" placeholder="Date" class="event-date" name="date" />
+                <input type="text" placeholder="Time: hh:mm" class="event-time" name="time" />
+            </div>
+            <div class="add-event-input">
+                <input type="text" placeholder="Date: dd/mm/yyyy" class="event-date" name="date" />
             </div>
             <div class="add-event-input">
                 <input type="text" placeholder="Description" class="description" name="description" />
@@ -30,6 +33,9 @@
             <input type="text" class="event-id" style="display: none;" name="id" />
             <div class="add-event-input">
                 <input type="text" placeholder="Event Name" class="event-name" name="title" />
+            </div>
+            <div class="add-event-input">
+                <input type="text" placeholder="Time: hh:mm" class="event-time" name="time" />
             </div>
             <div class="add-event-input">
                 <input type="text" placeholder="Date" class="event-date" name="date" />
@@ -53,7 +59,7 @@
                 <button class="add-event event-button">
                     <i class="fas fa-plus icon-add-event"></i>
                     <span class="text-add-event">
-                        Add Event
+                        New Event
                     </span>
                 </button>
 
