--- a/Calendy/src/resources/views/home.hbs
+++ b/Calendy/src/resources/views/home.hbs
@@ -18,6 +18,11 @@
             <div class="add-event-input">
                 <input type="text" placeholder="Description" class="description" name="description" />
             </div>
+            <select name="type">
+                <option value="work" style="color: #006ff9; font-weight: 500">Work</option>
+                <option value="education" style="color: #ffcc00; font-weight: 500">Education</option>
+                <option value="personal" style="color: #ff5630; font-weight: 500">Personal</option>
+            </select>
         </div>
         <div class="add-event-footer">
             <button class="add-event-btn">Add Event</button>
@@ -43,6 +48,11 @@
             <div class="add-event-input">
                 <input type="text" placeholder="Description" class="event-description" name="description" />
             </div>
+            <select name="type">
+                <option value="work" style="color: #006ff9; font-weight: 500">Work</option>
+                <option value="education" style="color: #ffcc00; font-weight: 500">Education</option>
+                <option value="personal" style="color: #ff5630; font-weight: 500">Personal</option>
+            </select>
         </div>
         <div class="add-event-footer">
             <button class="save-event-btn">Save</button>
