--- a/Calendy/src/resources/scss/style.scss
+++ b/Calendy/src/resources/scss/style.scss
@@ -216,6 +216,15 @@ body {
                 }
             }
         }
+
+        select {
+            margin-top: 10px;
+            width: 45%;
+            outline: none;
+            border: none;
+            border-bottom: 1px solid black;
+            font-weight: 500;
+        }
     }
 
     .add-event-footer {
@@ -588,15 +597,17 @@ body {
                     align-items: center;
                     cursor: pointer;
                     margin-top: 10px;
-                    border-bottom: 3px solid $boderColor;
+                    border-bottom: 2px solid $boderColor;
+                    border-left: 2px solid $boderColor;
                     overflow-x: hidden;
+                    box-shadow: 4px 4px 8px #8888888a;
 
                     .type {
                         display: block;
                         width: 100%;
                         height: 10px;
                         border-radius: 5px;
-                        background-color: $textColor2;
+                        color: transparent;
                     }
 
                     .title {
@@ -611,6 +622,12 @@ body {
                         font-size: 1rem;
                         text-align: left;
                         padding-left: 20px;
+                    }
+
+                    &:hover {
+                        box-shadow: 4px 4px 8px transparent;
+                        transform: translateY(2px);
+                        transform: translateX(-2px);
                     }
                 }
 
