--- a/Calendy/src/resources/views/home.hbs
+++ b/Calendy/src/resources/views/home.hbs
@@ -1,4 +1,24 @@
 <div class="container-fluid">
+    <div class="group-event" id="abc">
+            
+        <button id="toggleButton">
+            My Event
+        </button>
+
+        <div id="checkboxContainer" class="checkbox-container"></div>
+
+        
+        <button id="addButton">
+            <img src="https://cdn.iconscout.com/icon/free/png-256/free-add-1779868-1518520.png" height="25px" width="20px" alt="">
+        </button>
+
+        <div id="eventInputContainer" style="display: none;">
+            <input type="text" id="newEventName" placeholder="Enter event name">
+            <button id="confirmEventButton">Confirm</button>
+        </div>
+        
+            
+    </div>
     
     <div class="add-event-form">
         <div class="add-event-header">
@@ -102,6 +122,8 @@
                 </div>
             </div>
         </div>
+
+        
     </div>
 </div>
 </div>
