--- a/Calendy/src/resources/views/login.hbs
+++ b/Calendy/src/resources/views/login.hbs
@@ -1,6 +1,10 @@
-{{!-- test --}}
-<button class="loginButton">Login Page</button>
+<div class="loginPage">
 
+    {{!-- code trong div nay !! --}}
+    
+    <button class="loginButton">Login Page</button>
+
+</div>
 
 {{!-- ket noi voi file js --}}
 <script type="module" src="/js/login.js"></script>
