--- a/Calendy/src/resources/scss/style.scss
+++ b/Calendy/src/resources/scss/style.scss
@@ -7,126 +7,182 @@ $textColor3: #8a94a6;
 $boderColor: #dadce0;
 
 body {
-    background-color: $backgroundColor2;
+	background-image: linear-gradient(to bottom right, #EAE7F1, #E1F3FE);
 }
-
 .header {
-    background-color: #fff;
-    display: flex;
-    align-items: center;
-    height: 64px;
+	background-color: #fff;
+	display: flex;
+	align-items: center;
+	height: 64px;
 }
-
 .first-part {
-    display: flex;
+	display: flex;
 }
-
 .menu-header {
-    border: none;
-    width: 48px;
-    /* Đảm bảo kích thước phù hợp với hình ảnh */
-    height: 48px;
-    /* Đảm bảo kích thước phù hợp với hình ảnh */
-    border-radius: 50%;
-    /* Biến nó thành hình tròn */
-    display: flex;
-    justify-content: center;
-    /* Căn giữa theo chiều ngang */
-    align-items: center;
-    /* Căn giữa theo chiều dọc */
-    transition: background-color 0.3s;
-    /* Hiệu ứng chuyển đổi màu nền */
-    background-color: #fff;
+	border: none;
+	width: 48px;
+	height: 48px;
+	border-radius: 50%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	transition: background-color 0.3s;
+	background-color: #fff;
+	&:hover {
+		background-color: #f0f0f0;
+	}
 }
-
-.menu-header:hover {
-    background-color: #f0f0f0;
-    /* Màu nền khi hover */
-}
-
 .menu-header-img {
-    max-width: 20px;
+	max-width: 20px;
 }
-
 .beside-menu {
-    display: flex;
+	display: flex;
 }
-
 .logo-calendy {
-    width: 48px;
-    height: 48px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+	width: 48px;
+	height: 48px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
-
 .beside-logo {
-    margin-left: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+	margin-left: 30px;
+	margin-right: 5px;
+	margin-top: 5px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
-
 .detail-items {
-    display: flex;
+	display: flex;
+	display: flex;
 }
-
 .current-state {
-    margin-left: 30px;
-    padding: 8px;
-    border: 1px solid;
-    border-radius: 5px;
-    border-color: $boderColor;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 14px;
-    font-weight: 600;
-    cursor: pointer;
+	margin-left: 100px;
+	margin-right: 5px;
+	margin-top: 5px;
+	padding: 6px;
+	border: 1px solid;
+	border-radius: 5px;
+	border-color: #dadce0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 20px;
+	font-weight: 600;
+	cursor: pointer;
+	&:hover {
+		background-color: #f0f0f0;
+	}
 }
-
-.current-state:hover {
-    background-color: #f0f0f0;
-}
-
-.change-state {
-    color: #5f6368;
-}
-
 .prev-state {
-    color: #5f6368;
-    width: 32px;
-    height: 32px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 8px;
-    border-radius: 50%;
-    position: relative;
-    transition: background-color 0.3s;
+	margin-left: 20px;
+	margin-right: 5px;
+	color: #5f6368;
+	width: 50px;
+	height: 50px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 8px;
+	border-radius: 50%;
+	position: relative;
+	transition: background-color 0.3s;
+	&:hover {
+		background-color: #f0f0f0;
+	}
+	&::before {
+		content: "";
+		width: 10px;
+		height: 10px;
+		border-top: 2px solid #5f6368;
+		border-left: 2px solid #5f6368;
+		position: absolute;
+		top: 50%;
+		left: 55%;
+		transform: translate(-50%, -50%) rotate(-45deg);
+	}
 }
-
-.prev-state:hover {
-    background-color: #f0f0f0;
+.next-state {
+	margin-left: 10px;
+	margin-right: 5px;
+	color: #5f6368;
+	width: 50px;
+	height: 50px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 8px;
+	border-radius: 50%;
+	position: relative;
+	transition: background-color 0.3s;
+	&:hover {
+		background-color: #f0f0f0;
+	}
+	&::before {
+		content: "";
+		width: 10px;
+		height: 10px;
+		border-top: 2px solid #5f6368;
+		border-left: 2px solid #5f6368;
+		position: absolute;
+		top: 50%;
+		left: 45%;
+		transform: translate(-50%, -50%) rotate(135deg);
+	}
 }
-
-//::before là một pseudo-element được sử dụng để thêm nội dung vào
-// trước phần tử mục tiêu mà không cần phải thay đổi cấu trúc HTML
-// Nó cho phép bạn chèn nội dung hoặc kiểu dáng bổ sung mà không cần thay đổi HTML gốc.
-// Khi bạn sử dụng ::before, bạn có thể đặt các quy tắc kiểu dáng cho pseudo-element này
-// giống như đối với một phần tử HTML thực sự. Điều này có thể bao gồm việc thiết lập
-// kích thước, màu sắc, nội dung và các thuộc tính khác.
-.prev-state::before {
-    content: "";
-    width: 10px;
-    height: 10px;
-    border-top: 2px solid #5f6368;
-    border-left: 2px solid #5f6368;
-    position: absolute;
-    top: 50%;
-    left: 55%;
-    transform: translate(-50%, -50%) rotate(-45deg);
+.currentDate {
+	margin-left: 10px;
+	margin-right: 5px;
+	margin-top: 5px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
+/* Container cho các nút */
+.header-buttons {
+	display: flex;
+	margin-left: auto;
+	justify-content: flex-end;
+	align-items: center;
+  }
+  
+  /* Kiểu cho nút sign up */
+  .register-button {
+	background: transparent;
+	width: 97px;
+	height: 50px;
+	border-radius: 5px;
+	border-color: #dadce0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 20px;
+	font-weight: 600;
+	cursor: pointer;
+	margin-right: 10px; /* Khoảng cách với nút login */
+	&:hover {
+	  background-color: #fff;
+	}
+  }
+  
+  /* Kiểu cho nút login */
+  .login-button {
+	background: transparent;
+	width: 80px;
+	height: 50px;
+	border-radius: 5px;
+	border-color: #dadce0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 20px;
+	font-weight: 600;
+	cursor: pointer;
+	&:hover {
+	  background-color: #fff;
+	}
+  }
 
 
 // Add, edit event form
@@ -643,7 +699,173 @@ body {
 // CSS Login Page
 
 .loginPage {
+    height: 900px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .wrapper {
+        position: relative;
+        width: 400px;
+        height: 440px;
+        background: transparent;
+        border: 2px solid (rgba(255,255,255,0.5));
+        border-radius: 20px;
+        backdrop-filter: blur(20px);
+        box-shadow: 0 0 30px rgba(0,0,0,0.5);
+        transition: height .2s ease;
+        .form-box-login {
+            width: 100%;
+            padding: 40px;
+        }
+        .form-box-register {
+            display: none;
+            width: 100%;
+            padding: 40px;
+        }
+        .form-box-reset-password {
+            display: none;
+            width: 100%;
+            padding: 40px;
+        }
+        }
+    .wrapper.active {
+            height : 575px;
+        }
+    .wrapper.active .form-box-login {
+            display: none;
+        }
+    .wrapper.active .form-box-register {
+        display: block;
+    }
+    
+    .form-box-login h2 {
+        font-size: 2rem;
+        color: #2d384d;
+        text-align: center;
+    }
+    .form-box-register h2 {
+        font-size: 2rem;
+        color: #2d384d;
+        text-align: center;
+    }
+    .form-box-reset-password h2 {
+        font-size: 2rem;
+        color: #2d384d;
+        text-align: center;
+    }
+    .input-box {
+        position: relative;
+        width: 100%;
+        height: 50px;
+        border-bottom: 2px solid #5f6368;
+        margin : 30px 0;
+    }
+    .input-box label {
+        position: absolute;
+        top: 50%;
+        left: 5px;
+        transform: translateY(-50%);
+        font-size: 1rem;
+        color: #8a94a6;
+        font-weight: 500;
+        pointer-events: none;
+    }
+    .input-box input:focus~label,
+    .input-box input:valid~label {
+        top: -5px;
+        transition: 0.3s;
+    }
+    .input-box input {
+        width: 100%;
+        height: 100%;
+        background: transparent;
+        border: none;
+        outline: none;
+        font-weight: 600;
+        padding: 0 35px 0 5px;
+    }
+    .forget-password {
+        font-size: 0.9rem;
+        color: #8a94a6;
+        font-weight: 500;
+        margin: -15px 0 15px;
+        display: flex;
+        justify-content: right;
+    }
+    .forget-password a {
+        color : #8a94a6;
+        text-decoration: none;
+        }
+    .forget-password a:hover {
+        text-decoration: underline;
+    }
+    .login-submit-btn {
+        width: 100%;
+        height: 45px;
+        background: #8a94a6;
+        border: none;
+        outline: none;
+        border-radius: 6px;
+        cursor: pointer;
+        font-size: 1rem;
+        color: #fff;
+        font-weight: 500;
+    }
+    .register-submit-btn {
+        width: 100%;
+        height: 45px;
+        background: #8a94a6;
+        border: none;
+        outline: none;
+        border-radius: 6px;
+        cursor: pointer;
+        font-size: 1rem;
+        color: #fff;
+        font-weight: 500;
+    }
+    .reset-submit-btn {
+        width: 100%;
+        height: 45px;
+        background: #8a94a6;
+        border: none;
+        outline: none;
+        border-radius: 6px;
+        cursor: pointer;
+        font-size: 1rem;
+        color: #fff;
+        font-weight: 500;
+    }
+    .register {
+        font-size: 0.9rem;
+        color: #373c4f;
+        text-align: center;
+        font-weight: 500;
+        margin: 25px 0 10px;
+    }
+    .register p a {
+        color: #323b4b;
+        text-decoration: none;
+        font-weight: 600;
+    }
+    .register p a:hover {
+        text-decoration: underline;
+    }
     button {
         background-color: #005ff9;
     }
+
+
+    .wrapper.reset {
+        height : 575px;
+    }
+.wrapper.reset .form-box-login {
+        display: none;
+    }
+.wrapper.reset .form-box-register {
+    display: none;
+}
+.wrapper.reset .form-box-reset-password {
+    display: block;
+}
 }
