--- a/Calendy/src/resources/views/login.hbs
+++ b/Calendy/src/resources/views/login.hbs
@@ -5,11 +5,11 @@
             <h2>Log in</h2>
             <form id="loginForm">
         <div class="input-box">
-          <input type="text" id="usernameInput" name="username" required>
+          <input type="text" id="login-usernameInput" name="username" required>
           <label>Username</label>
         </div>
         <div class="input-box">
-          <input type="password" id="passwordInput" name="password" required>
+          <input type="password" id="login-passwordInput" name="password" required>
           <label>Password</label>
         </div>
         <div class="forget-password">
