check valid date, time

--- a/Calendy/src/resources/scss/style.scss
+++ b/Calendy/src/resources/scss/style.scss
@@ -7,6 +7,7 @@ $textColor3: #8a94a6;
 $boderColor: #dadce0;
 
 body {
+    background-color: $backgroundColor2;
 }
 .header {
 	background-color: #fff;
