login and register

--- a/Calendy/src/resources/views/home.hbs
+++ b/Calendy/src/resources/views/home.hbs
@@ -122,5 +122,7 @@
 </div>
 </div>
 </div>
-
+<script>
+  const userId = '{{ userId }}';
+</script>
 <script type="module" src="/js/index.js"></script>
